--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 
 <body>
-    <h1>This is my portfolio</h1>
+    <h1>Eli Bird</h1>
+    <br>
+    <h2>This is my portfolio</h2>
     <br>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. A odio nisi corrupti, eos quis illo. Aperiam, amet aliquid nemo id atque totam vel temporibus sit et, dolor minima hic blanditiis.</p>
     <br>
