--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <br>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. A odio nisi corrupti, eos quis illo. Aperiam, amet aliquid nemo id atque totam vel temporibus sit et, dolor minima hic blanditiis.</p>
     <br>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi ullam, dicta iste illum deserunt aliquam earum quos nemo veniam animi. Labore ipsum accusantium optio aperiam! Nisi eos voluptate enim sed.</p>
+    <p>John wants to see what I can do to edit my website</p>
 </body>
 
 </html>
