checking if changes made in new editor work

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <br>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. A odio nisi corrupti, eos quis illo. Aperiam, amet aliquid nemo id atque totam vel temporibus sit et, dolor minima hic blanditiis.</p>
     <br>
-    <p>John wants to see what I can do to edit my website</p>
+    <p>seeing if changes are pushing to origin properly</p>
 </body>
 
 </html>
