--- a/index.html
+++ b/index.html
@@ -2,18 +2,13 @@
 
 <html>
 
-<head> 
-    <title>Portfolio</title>
+<head>
+    <title>Eli Bird - Portfolio</title>
 </head>
 
 <body>
-    <h1>Eli Bird</h1>
-    <br>
-    <h2>This is my portfolio</h2>
-    <br>
-    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. A odio nisi corrupti, eos quis illo. Aperiam, amet aliquid nemo id atque totam vel temporibus sit et, dolor minima hic blanditiis.</p>
-    <br>
-    <p>seeing if changes are pushing to origin properly</p>
 </body>
+
+
 
 </html>
