--- a/index.html
+++ b/index.html
@@ -8,7 +8,11 @@
 
 <body>
     <h1>some text</h1>
+    <hr>
     <p>more sample text but in a paragraph form to see how this looks</p>
+    <a href="https://www.google.com" target=_blank title="This takes you to Google">
+        Google
+    </a>
 </body>
 
 
