--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <h1>some text</h1>
     <hr>
     <p>more sample text but in a paragraph form to see how this looks</p>
-    <a href="https://www.google.com" target=_blank title="This takes you to Google">
-        Google
+    <a href="profil.html" target=_self title="my profile">
+        Who is Eli Bird?
     </a>
 </body>
 
