--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>some text</h1>
     <hr>
     <p>more sample text but in a paragraph form to see how this looks</p>
-    <a href="profil.html" target=_self title="my profile">
+    <a href="profile.html" target=_self title="my profile">
         Who is Eli Bird?
     </a>
 </body>
