--- a/profile.html
+++ b/profile.html
@@ -6,5 +6,10 @@
     </head>
     <body>
         <h1>Who is Eli Bird?</h1>
+        <br>
+        <a href="mailto:ebird@queensmetro.com" target=_blank title="my email">
+            email me
+        </a>
+        <img src="IMG_E5140.JPG">
     <body>
 </html>
