--- a/profile.html
+++ b/profile.html
@@ -10,6 +10,6 @@
         <a href="mailto:ebird@queensmetro.com" target=_blank title="my email">
             email me
         </a>
-        <img src="IMG_E5140.JPG">
-    <body>
+        <img src="/images/IMG_E5140.JPG" height=300 alt="This is a picture of me" title="me">
+    </body>        
 </html>
