--- a/index.html
+++ b/index.html
@@ -4,12 +4,22 @@
 
 <head>
     <title>Eli Bird - Portfolio</title>
+<style>
+    h1 {color:rgb(255, 255, 255);}
+    h3 {color:rgb(255, 255, 255);}
+    li {color:rgb(255, 255, 255);}
+    p {color:rgb(255, 255, 255);}
+/style>
 </head>
 
-<body>
+<body style="background-color: black;">
     <h1>some text</h1>
     <hr>
-    <p>more sample text but in a paragraph form to see how this looks</p>
+    <h3><b>Projects:</b></h3>
+    <ul>
+        <li>Platformer Game (pygame)<li>
+        <li>Flappy Bird (Unity)<li>
+    </ul>
     <a href="profile.html" target=_self title="my profile">
         Who is Eli Bird?
     </a>
