--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 /style>
 </head>
 
-<body style="background-color: black;">
+<body style="background-color: rgb(0, 0, 0);">
     <h1>some text</h1>
     <hr>
     <h3><b>Projects:</b></h3>
