--- a/profile.html
+++ b/profile.html
@@ -3,8 +3,14 @@
 <html>
     <head>
         <title>Eli Bird - Profile</title>
+        <style>
+            h1 {color:rgb(255, 255, 255);}
+            h3 {color:rgb(255, 255, 255);}
+            li {color:rgb(255, 255, 255);}
+            p {color:rgb(255, 255, 255);}
+        /style>
     </head>
-    <body>
+    <body style="background-color: rgb(0, 0, 0);">
         <h1>Who is Eli Bird?</h1>
         <br>
         <img src="/images/IMG_E5140.JPG" height=300 alt="This is a picture of me" title="me">
