--- a/profile.html
+++ b/profile.html
@@ -8,7 +8,7 @@
             h3 {color:rgb(0, 0, 0);}
             li {color:rgb(0, 0, 0);}
             p {color:rgb(0, 0, 0);}
-        /style>
+        </style>
     </head>
     <body style="background-color: rgb(0, 0, 0);">
         <h1>Who is Eli Bird?</h1>
