--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     h3 {color:rgb(0, 0, 0);}
     li {color:rgb(0, 0, 0);}
     p {color:rgb(0, 0, 0);}
-/style>
+</style>
 </head>
 
 <body style="background-color: rgb(0, 0, 0);">
