added end tag for list items

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <hr>
     <h3><b>Projects:</b></h3>
     <ul>
-        <li>Platformer Game (pygame)<li>
-        <li>Flappy Bird (Unity)<li>
+        <li>Platformer Game (pygame)</li>
+        <li>Flappy Bird (Unity)</li>
     </ul>
     <a href="profile.html" target=_self title="my profile">
         Who is Eli Bird?
