--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body style="background-color: rgb(0, 0, 0);">
-    <h1>some text</h1>
+    <h1>Eli Bird - Portfolio</h1>
     <hr>
     <h3><b>Projects:</b></h3>
     <ul>
