github links shared

--- a/index.html
+++ b/index.html
@@ -17,8 +17,12 @@
     <hr>
     <h3><b>Projects:</b></h3>
     <ul>
-        <li>Platformer Game (pygame)</li>
-        <li>Flappy Bird (Unity)</li>
+        <li><a href="platformer.html" target=_self title="platformer project">
+            Platformer Game (pygame)
+        </a></li>
+        <li><a href="floppy.html" target=_self title="flappy bird clone">
+            Floppy Bird (Unity)
+        </a></li>
     </ul>
     <a href="profile.html" target=_self title="my profile">
         Who is Eli Bird?
